Fixed Dark Mode issue which was present in last commit of main branch

--- a/lucid_expense_tracker/src/App.css
+++ b/lucid_expense_tracker/src/App.css
@@ -1,5 +1,25 @@
+html{
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+body {
+  /* smooth transition between dark and light mode */
+  transition: background-color 250ms ease-in-out;
+}
+
+/* dark:bg-black of tailwind css didn't work so adding this custom CSS 
+  to add these styling in body while html has "dark" class*/
+.dark body{
+  background-color: var(--dark-mode-bg-color);
+  color: var(--dark-mode-text-color)
 }
