--- a/lucid_expense_tracker/src/index.css
+++ b/lucid_expense_tracker/src/index.css
@@ -33,3 +33,8 @@ body {
   width: 100%;
 }
 
+:root{
+  --dark-mode-bg-color: #021121;
+  --dark-mode-text-color: #ffffff;
+}
+
